Added more testcase for ka-GE

--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -77,6 +77,7 @@ limitations under the License.
     <script src="testdatefmt_id_ID.js"></script>
     <script src="testdatefmt_it_IT.js"></script>
     <script src="testdatefmt_ja_JP.js"></script>
+    <script src="testdatefmt_ka_GE.js"></script>
     <script src="testdatefmt_kk_Cyrl_KZ.js"></script>
     <script src="testdatefmt_km_KH.js"></script>
     <script src="testdatefmt_kn_IN.js"></script>
