--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -67,6 +67,7 @@ limitations under the License.
     <script src="testdatefmtrange_id_ID.js"></script>
     <script src="testdatefmtrange_it_IT.js"></script>
     <script src="testdatefmtrange_ja_JP.js"></script>
+    <script src="testdatefmtrange_ka_GE.js"></script>
     <script src="testdatefmtrange_kk_Cyrl_KZ.js"></script>
     <script src="testdatefmtrange_km_KH.js"></script>
     <script src="testdatefmtrange_kn_IN.js"></script>
