--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -31,7 +31,7 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <!--  script src="testglyphstr.js"></script>
+    <script src="testglyphstr.js"></script>
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_am_ET.js"></script>
     <script src="testlistfmt_ar.js"></script>
@@ -47,6 +47,7 @@ limitations under the License.
     <script src="testlistfmt_hi_IN.js"></script>
     <script src="testlistfmt_hr.js"></script>
     <script src="testlistfmt_it.js"></script>
+    <script src="testlistfmt_ka_GE.js"></script>
     <script src="testlistfmt_kn_IN.js"></script>
     <script src="testlistfmt_ml_IN.js"></script>
     <script src="testlistfmt_mr_IN.js"></script>
@@ -67,7 +68,7 @@ limitations under the License.
     <script src="testlistfmt_tr.js"></script>
     <script src="testlistfmt_uk_UA.js"></script>
     <script src="testlistfmt_ur.js"></script>
-    <script src="testlistfmt_zh.js"></script -->
+    <script src="testlistfmt_zh.js"></script>
     <script src="testnorm.js"></script>
     <script src="testglyphstrasync.js"></script>
     <script src="testlistfmtasync.js"></script>
