Add testcase to verify gl-ES

--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -58,6 +58,7 @@ limitations under the License.
     <script src="testdatefmtrange_fr_CA.js"></script>
     <script src="testdatefmtrange_fr_FR.js"></script>
     <script src="testdatefmtrange_ga_IE.js"></script>
+    <script src="testdatefmtrange_gl_ES.js"></script>
     <script src="testdatefmtrange_gu_IN.js"></script>
     <script src="testdatefmtrange_ha_Latn_NG.js"></script>
     <script src="testdatefmtrange_he_IL.js"></script>
