--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -43,6 +43,7 @@ limitations under the License.
     <script src="testlistfmt_fa.js"></script>
     <script src="testlistfmt_fr.js"></script>
     <script src="testlistfmt_gu_IN.js"></script>
+    <script src="testlistfmt_gl_ES.js"></script>
     <script src="testlistfmt_he_IL.js"></script>
     <script src="testlistfmt_hi_IN.js"></script>
     <script src="testlistfmt_hr.js"></script>
