--- a/js/test/units/testSuite.html
+++ b/js/test/units/testSuite.html
@@ -43,6 +43,7 @@ limitations under the License.
     <script src="testtemp.js"></script>
     <script src="testtime.js"></script>
     <script src="testunitfmt.js"></script>
+    <script src="testunitfmt_gl_ES.js"></script>
     <script src="testunits.js"></script>
     <script src="testunitfmtasync.js"></script>
     <script src="testdigitalspeed.js"></script>
