Write newly added file in testSuite.html

--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -48,6 +48,7 @@ limitations under the License.
     <script src="testdatefmt_ar_SA.js"></script>
     <script src="testdatefmt_as_IN.js"></script>
     <script src="testdatefmt_az_Latn_AZ.js"></script>
+    <script src="testdatefmt_be_BY.js"></script>
     <script src="testdatefmt_bg.js"></script>
     <script src="testdatefmt_bn_IN.js"></script>
     <script src="testdatefmt_bs_Cyrl_BA.js"></script>
