--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -38,6 +38,7 @@ limitations under the License.
     <script src="testdatefmtrange_ar_SA.js"></script>
     <script src="testdatefmtrange_as_IN.js"></script>
     <script src="testdatefmtrange_az_Latn_AZ.js"></script>
+    <script src="testdatefmtrange_be_BY.js"></script>
     <script src="testdatefmtrange_bg_BG.js"></script>
     <script src="testdatefmtrange_bn_IN.js"></script>
     <script src="testdatefmtrange_bs_Latn_BA.js"></script>
