--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -64,6 +64,7 @@ limitations under the License.
     <script src="testdatefmt_es_CO.js"></script>
     <script src="testdatefmt_es_ES.js"></script>
     <script src="testdatefmt_et_EE.js"></script>
+    <script src="testdatefmt_eu_ES.js"></script>
     <script src="testdatefmt_fa_IR.js"></script>
     <script src="testdatefmt_fi_FI.js"></script>
     <script src="testdatefmt_fr_CA.js"></script>
