--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -53,6 +53,7 @@ limitations under the License.
     <script src="testdatefmtrange_es_UY.js"></script>
     <script src="testdatefmtrange_es_VE.js"></script>
     <script src="testdatefmtrange_et_EE.js"></script>
+    <script src="testdatefmtrange_eu_ES.js"></script>
     <script src="testdatefmtrange_fa_IR.js"></script>
     <script src="testdatefmtrange_fi_FI.js"></script>
     <script src="testdatefmtrange_fr_CA.js"></script>
