--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -40,6 +40,7 @@ limitations under the License.
     <script src="testlistfmt_el.js"></script>
     <script src="testlistfmt_en.js"></script>
     <script src="testlistfmt_es.js"></script>
+    <script src="testlistfmt_eu_ES.js"></script>
     <script src="testlistfmt_fa.js"></script>
     <script src="testlistfmt_fr.js"></script>
     <script src="testlistfmt_gu_IN.js"></script>
