Add testcase to verify hy-AM

--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -74,6 +74,7 @@ limitations under the License.
     <script src="testdatefmt_he_IL.js"></script>
     <script src="testdatefmt_hi_IN.js"></script>
     <script src="testdatefmt_hr_HR.js"></script>
+    <script src="testdatefmt_hy_AM.js"></script>
     <script src="testdatefmt_id_ID.js"></script>
     <script src="testdatefmt_it_IT.js"></script>
     <script src="testdatefmt_ja_JP.js"></script>
