Add testcases to verify hy-AM

--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -64,6 +64,7 @@ limitations under the License.
     <script src="testdatefmtrange_hi_IN.js"></script>
     <script src="testdatefmtrange_hr_HR.js"></script>
     <script src="testdatefmtrange_hu_HU.js"></script>
+    <script src="testdatefmtrange_hy_AM.js"></script>
     <script src="testdatefmtrange_id_ID.js"></script>
     <script src="testdatefmtrange_it_IT.js"></script>
     <script src="testdatefmtrange_ja_JP.js"></script>
