--- a/js/test/strings-ext/testSuiteCompiled.html
+++ b/js/test/strings-ext/testSuiteCompiled.html
@@ -46,6 +46,7 @@ limitations under the License.
     <script src="testlistfmt_he_IL.js"></script>
     <script src="testlistfmt_hi_IN.js"></script>
     <script src="testlistfmt_hr.js"></script>
+    <script src="testlistfmt_hy_AM.js"></script>
     <script src="testlistfmt_it.js"></script>
     <script src="testlistfmt_kn_IN.js"></script>
     <script src="testlistfmt_ml_IN.js"></script>
