--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -45,6 +45,7 @@ limitations under the License.
     <script src="testlistfmt_gu_IN.js"></script>
     <script src="testlistfmt_he_IL.js"></script>
     <script src="testlistfmt_hi_IN.js"></script>
+    <script src="testlistfmt_hy_AM.js"></script>
     <script src="testlistfmt_hr.js"></script>
     <script src="testlistfmt_it.js"></script>
     <script src="testlistfmt_ka_GE.js"></script>
