Add test cases to verify ca-AD, ca-ES

--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017-2018, JEDLSoft
+Copyright © 2017-2018, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -36,6 +36,7 @@ limitations under the License.
     <script src="testlistfmt_am_ET.js"></script>
     <script src="testlistfmt_ar.js"></script>
     <script src="testlistfmt_bs.js"></script>
+    <script src="testlistfmt_ca.js"></script>
     <script src="testlistfmt_de.js"></script>
     <script src="testlistfmt_el.js"></script>
     <script src="testlistfmt_en.js"></script>
