--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -52,6 +52,7 @@ limitations under the License.
     <script src="testdatefmt_bn_IN.js"></script>
     <script src="testdatefmt_bs_Cyrl_BA.js"></script>
     <script src="testdatefmt_bs_Latn_BA.js"></script>
+    <script src="testdatefmt_ca.js"></script>
     <script src="testdatefmt_cop_EG.js"></script>
     <script src="testdatefmt_cs_CZ.js"></script>
     <script src="testdatefmt_da_DK.js"></script>
