--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -41,6 +41,7 @@ limitations under the License.
     <script src="testdatefmtrange_bg_BG.js"></script>
     <script src="testdatefmtrange_bn_IN.js"></script>
     <script src="testdatefmtrange_bs_Latn_BA.js"></script>
+    <script src="testdatefmtrange_ca.js"></script>
     <script src="testdatefmtrange_cs_CZ.js"></script>
     <script src="testdatefmtrange_da_DK.js"></script>
     <script src="testdatefmtrange_de_DE.js"></script>
