--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -83,6 +83,7 @@ limitations under the License.
     <script src="testdatefmt_kn_IN.js"></script>
     <script src="testdatefmt_ko_KR.js"></script>
     <script src="testdatefmt_ku_Arab_IQ.js"></script>
+    <script src="testdatefmt_lo_LA.js"></script>
     <script src="testdatefmt_lt_LT.js"></script>
     <script src="testdatefmt_lv_LV.js"></script>
     <script src="testdatefmt_mk_MK.js"></script>
