--- a/js/test/strings-ext/testSuiteCompiled.html
+++ b/js/test/strings-ext/testSuiteCompiled.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -48,6 +48,7 @@ limitations under the License.
     <script src="testlistfmt_hr.js"></script>
     <script src="testlistfmt_it.js"></script>
     <script src="testlistfmt_kn_IN.js"></script>
+    <script src="testlistfmt_lo_LA.js"></script>
     <script src="testlistfmt_ml_IN.js"></script>
     <script src="testlistfmt_mr_IN.js"></script>
     <script src="testlistfmt_ms.js"></script>
