--- a/js/test/testSuite.html
+++ b/js/test/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - Run all tests
 
-Copyright © 2012-2017, JEDLSoft
+Copyright © 2012-2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
