--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -32,7 +32,7 @@ limitations under the License.
     </script>
     <script src="testclock.js"></script>
     <script src="testcalendar.js"></script>
-    <!--<script src="testdate.js"></script>
+    <script src="testdate.js"></script>
     <script src="testdateasync.js"></script>
     <script src="testdatefmt.js"></script>
     <script src="testdatetimefmt.js"></script>
@@ -89,7 +89,7 @@ limitations under the License.
     <script src="testdatefmt_mk_MK.js"></script>
     <script src="testdatefmt_ml_IN.js"></script>
     <script src="testdatefmt_mn_Cyrl_MN.js"></script>
-    <script src="testdatefmt_mr_IN.js"></script>-->
+    <script src="testdatefmt_mr_IN.js"></script>
     <script src="testdatefmt_ms_MY.js"></script>
     <script src="testdatefmt_my_MM.js"></script>
     <script src="testdatefmt_nb_NO.js"></script>
