Add testcases to verify ne-NP

--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -82,6 +82,7 @@ limitations under the License.
     <script src="testdatefmtrange_mr_IN.js"></script>
     <script src="testdatefmtrange_ms_MY.js"></script>
     <script src="testdatefmtrange_nb_NO.js"></script>
+    <script src="testdatefmtrange_ne_NP.js"></script>
     <script src="testdatefmtrange_nl_NL.js"></script>
     <script src="testdatefmtrange_or_IN.js"></script>
     <script src="testdatefmtrange_pa_IN.js"></script>
