--- a/js/test/units/testSuite.html
+++ b/js/test/units/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017-2018, JEDLSoft
+Copyright © 2017-2018, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -44,6 +44,7 @@ limitations under the License.
     <script src="testtime.js"></script>
     <script src="testunitfmt.js"></script>
     <script src="testunitfmt_eu_ES.js"></script>
+    <script src="testunitfmt_ne_NP.js"></script>
     <script src="testunits.js"></script>
     <script src="testunitfmtasync.js"></script>
     <script src="testdigitalspeed.js"></script>
