--- a/js/test/strings-ext/testSuiteCompiled.html
+++ b/js/test/strings-ext/testSuiteCompiled.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017, 2020 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -35,6 +35,7 @@ limitations under the License.
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_am_ET.js"></script>
     <script src="testlistfmt_ar.js"></script>
+    <script src="testlistfmt_be_BY.js"></script>
     <script src="testlistfmt_bs.js"></script>
     <script src="testlistfmt_de.js"></script>
     <script src="testlistfmt_el.js"></script>
