--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020 JEDLSoft
+Copyright © 2017, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -97,6 +97,7 @@ limitations under the License.
     <script src="testdatefmt_mn_Cyrl_MN.js"></script>
     <script src="testdatefmt_mr_IN.js"></script>
     <script src="testdatefmt_ms_MY.js"></script>
+    <script src="testdatefmt_mt_MT.js"></script>
     <script src="testdatefmt_my_MM.js"></script>
     <script src="testdatefmt_nb_NO.js"></script>
     <script src="testdatefmt_ne_NP.js"></script>
