Add more test cases for veryfying mt-MT

--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020 JEDLSoft
+Copyright © 2017, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -87,6 +87,7 @@ limitations under the License.
     <script src="testdatefmtrange_mn_Cyrl_MN.js"></script>
     <script src="testdatefmtrange_mr_IN.js"></script>
     <script src="testdatefmtrange_ms_MY.js"></script>
+    <script src="testdatefmtrange_mt_MT.js"></script>
     <script src="testdatefmtrange_my_MM.js"></script>
     <script src="testdatefmtrange_nb_NO.js"></script>
     <script src="testdatefmtrange_ne_NP.js"></script>
