Add more test cases for tg-TJ

--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020 JEDLSoft
+Copyright © 2017, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -107,6 +107,7 @@ limitations under the License.
     <script src="testdatefmtrange_sw_KE.js"></script>
     <script src="testdatefmtrange_ta_IN.js"></script>
     <script src="testdatefmtrange_te_IN.js"></script>
+    <script src="testdatefmtrange_tg_TJ.js"></script>
     <script src="testdatefmtrange_th_TH.js"></script>
     <script src="testdatefmtrange_tr_TR.js"></script>
     <script src="testdatefmtrange_uk_UA.js"></script>
