--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -73,6 +73,7 @@ limitations under the License.
     <script src="testlistfmt_sv.js"></script>
     <script src="testlistfmt_ta_IN.js"></script>
     <script src="testlistfmt_te_IN.js"></script>
+    <script src="testlistfmt_tg_TJ.js"></script>
     <script src="testlistfmt_th_TH.js"></script>
     <script src="testlistfmt_tr.js"></script>
     <script src="testlistfmt_uk_UA.js"></script>
