Add more tcs to verify tk-TM

--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -117,6 +117,7 @@ limitations under the License.
     <script src="testdatefmt_ta_IN.js"></script>
     <script src="testdatefmt_te_IN.js"></script>
     <script src="testdatefmt_th_TH.js"></script>
+    <script src="testdatefmt_tk_TM.js"></script>
     <script src="testdatefmt_tr_TR.js"></script>
     <script src="testdatefmt_uk_UA.js"></script>
     <script src="testdatefmt_ur_IN.js"></script>
