--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017-2018, 2020 JEDLSoft
+Copyright © 2017-2018, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -74,6 +74,7 @@ limitations under the License.
     <script src="testlistfmt_ta_IN.js"></script>
     <script src="testlistfmt_te_IN.js"></script>
     <script src="testlistfmt_th_TH.js"></script>
+    <script src="testlistfmt_tk_TM.js"></script>
     <script src="testlistfmt_tr.js"></script>
     <script src="testlistfmt_uk_UA.js"></script>
     <script src="testlistfmt_ur.js"></script>
