--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020 JEDLSoft
+Copyright © 2017, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -108,6 +108,7 @@ limitations under the License.
     <script src="testdatefmtrange_ta_IN.js"></script>
     <script src="testdatefmtrange_te_IN.js"></script>
     <script src="testdatefmtrange_th_TH.js"></script>
+    <script src="testdatefmtrange_tk_TM.js"></script>
     <script src="testdatefmtrange_tr_TR.js"></script>
     <script src="testdatefmtrange_uk_UA.js"></script>
     <script src="testdatefmtrange_ur_IN.js"></script>
