--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020 JEDLSoft
+Copyright © 2017, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
