--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020 JEDLSoft
+Copyright © 2017, 2020-2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -123,6 +123,7 @@ limitations under the License.
     <script src="testdatefmt_uz_Cyrl_UZ.js"></script>
     <script src="testdatefmt_uz_Latn_UZ.js"></script>
     <script src="testdatefmt_vi_VN.js"></script>
+    <script src="testdatefmt_wo_SN.js"></script>
     <script src="testdatefmt_zh_CN.js"></script>
     <script src="testdatefmt_zh_Hant_HK.js"></script>
     <script src="testdatefmt_zh_Hant_TW.js"></script>
