Add more testcases for wo-SN

--- a/js/test/units/testSuite.html
+++ b/js/test/units/testSuite.html
@@ -55,6 +55,7 @@ limitations under the License.
     <script src="testunitfmt_ne_NP.js"></script>
     <script src="testunitfmt_tk_TM.js"></script>
     <script src="testunitfmt_tg_TJ.js"></script>
+    <script src="testunitfmt_wo_SN.js"></script>
     <script src="testunits.js"></script>
     <script src="testunitfmtasync.js"></script>
     <script src="testdigitalspeed.js"></script>
