Add more tcs for zu-ZA and fix some locale data

--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -81,6 +81,7 @@ limitations under the License.
     <script src="testlistfmt_uk_UA.js"></script>
     <script src="testlistfmt_ur.js"></script>
     <script src="testlistfmt_zh.js"></script>
+    <script src="testlistfmt_zu_ZA.js"></script>
     <script src="testnorm.js"></script>
     <script src="testglyphstrasync.js"></script>
     <script src="testlistfmtasync.js"></script>
