--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -120,6 +120,7 @@ limitations under the License.
     <script src="testdatefmtrange_zh_Hans_CN.js"></script>
     <script src="testdatefmtrange_zh_Hant_HK.js"></script>
     <script src="testdatefmtrange_zh_Hant_TW.js"></script>
+    <script src="testdatefmtrange_zu_ZA.js"></script>
     <script src="testdatefmtrange_fmttemplate.js"></script>
   </head>
   <body>
