--- a/js/test/units/testSuite.html
+++ b/js/test/units/testSuite.html
@@ -45,6 +45,7 @@ limitations under the License.
     <script src="testunitfmt.js"></script>
     <script src="testunitfmt_be_BY.js"></script>
     <script src="testunitfmt_ca.js"></script>
+    <script src="testunitfmt_en_GB.js"></script>
     <script src="testunitfmt_eu_ES.js"></script>
     <script src="testunitfmt_gl_ES.js"></script>
     <script src="testunitfmt_hy_AM.js"></script>
