--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020-2021 JEDLSoft
+Copyright © 2017, 2020-2022 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -80,6 +80,7 @@ limitations under the License.
     <script src="testdatefmt_hr_HR.js"></script>
     <script src="testdatefmt_hy_AM.js"></script>
     <script src="testdatefmt_id_ID.js"></script>
+    <script src="testdatefmt_ig_NG.js"></script>
     <script src="testdatefmt_it_IT.js"></script>
     <script src="testdatefmt_ja_JP.js"></script>
     <script src="testdatefmt_ka_GE.js"></script>
