--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020-2021 JEDLSoft
+Copyright © 2017, 2020-2022 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -70,6 +70,7 @@ limitations under the License.
     <script src="testdatefmtrange_hu_HU.js"></script>
     <script src="testdatefmtrange_hy_AM.js"></script>
     <script src="testdatefmtrange_id_ID.js"></script>
+    <script src="testdatefmtrange_ig_NG.js"></script>
     <script src="testdatefmtrange_it_IT.js"></script>
     <script src="testdatefmtrange_ja_JP.js"></script>
     <script src="testdatefmtrange_ka_GE.js"></script>
