--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, 2020-2021 JEDLSoft
+Copyright © 2017, 2020-2022 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -79,6 +79,7 @@ limitations under the License.
     <script src="testdatefmtrange_ko_KR.js"></script>
     <script src="testdatefmtrange_ku_Arab_IQ.js"></script>
     <script src="testdatefmtrange_ky_KG.js"></script>
+    <script src="testdatefmtrange_lb_LU.js"></script>
     <script src="testdatefmtrange_lo_LA.js"></script>
     <script src="testdatefmtrange_lt_LT.js"></script>
     <script src="testdatefmtrange_lv_LV.js"></script>
