--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017-2018, 2020-2021 JEDLSoft
+Copyright © 2017-2018, 2020-2022 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -55,6 +55,7 @@ limitations under the License.
     <script src="testlistfmt_ka_GE.js"></script>
     <script src="testlistfmt_ky_KG.js"></script>
     <script src="testlistfmt_kn_IN.js"></script>
+    <script src="testlistfmt_lb_LU.js"></script>
     <script src="testlistfmt_lo_LA.js"></script>
     <script src="testlistfmt_ml_IN.js"></script>
     <script src="testlistfmt_mr_IN.js"></script>
