--- a/js/test/units/testSuite.html
+++ b/js/test/units/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017-2018, 2020-2021 JEDLSoft
+Copyright © 2017-2018, 2020-2022 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -50,6 +50,7 @@ limitations under the License.
     <script src="testunitfmt_gl_ES.js"></script>
     <script src="testunitfmt_hy_AM.js"></script>
     <script src="testunitfmt_ky_KG.js"></script>
+    <script src="testunitfmt_lb_LU.js"></script>
     <script src="testunitfmt_lo_LA.js"></script>
     <script src="testunitfmt_mt_MT.js"></script>
     <script src="testunitfmt_my_MM.js"></script>
