Fix ps/dateformats.json and add more tcs for datefmt/durfmt/daterange

--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -107,6 +107,7 @@ limitations under the License.
     <script src="testdatefmt_or_IN.js"></script>
     <script src="testdatefmt_pa_IN.js"></script>
     <script src="testdatefmt_pl_PL.js"></script>
+    <script src="testdatefmt_ps_AF.js"></script>
     <script src="testdatefmt_ps_PK.js"></script>
     <script src="testdatefmt_pt_BR.js"></script>
     <script src="testdatefmt_ro_RO.js"></script>
