Add more test cases to verify ps-AF, ps-PK locales

--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -97,6 +97,7 @@ limitations under the License.
     <script src="testdatefmtrange_or_IN.js"></script>
     <script src="testdatefmtrange_pa_IN.js"></script>
     <script src="testdatefmtrange_pl_PL.js"></script>
+    <script src="testdatefmtrange_ps_PK.js"></script>
     <script src="testdatefmtrange_pt_BR.js"></script>
     <script src="testdatefmtrange_pt_PT.js"></script>
     <script src="testdatefmtrange_ro_RO.js"></script>
