--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -68,6 +68,7 @@ limitations under the License.
     <script src="testlistfmt_nl.js"></script>
     <script src="testlistfmt_pa.js"></script>
     <script src="testlistfmt_ja_JP.js"></script>
+    <script src="testlistfmt_ps.js"></script>
     <script src="testlistfmt_pt.js"></script>
     <script src="testlistfmt_ru.js"></script>
     <script src="testlistfmt_si_LK.js"></script>
