--- a/js/test/units/testSuite.html
+++ b/js/test/units/testSuite.html
@@ -56,6 +56,8 @@ limitations under the License.
     <script src="testunitfmt_mt_MT.js"></script>
     <script src="testunitfmt_my_MM.js"></script>
     <script src="testunitfmt_ne_NP.js"></script>
+    <script src="testunitfmt_ps_AF.js"></script>
+    <script src="testunitfmt_ps_PK.js"></script>
     <script src="testunitfmt_tk_TM.js"></script>
     <script src="testunitfmt_tg_TJ.js"></script>
     <script src="testunitfmt_wo_SN.js"></script>
